--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
   <section id="Contact" class="signup-section">
     <div class="container">
       <div class="row">
-
-      <h2 class="text-white mb-4" >WeChat : ultraksb28</h2>
-      <h2 class="text-white mb-4" >kakaoTalk : topseller</h2>
-
+        <h2 class="text-white mb-4" >WeChat : ultraksb28</h2>
+      </div>
+      <div class="row">
+        <h2 class="text-white mb-4" >kakaoTalk : topseller</h2>
       </div>
     </div>
 <!-- 
